--- a/src/App.css
+++ b/src/App.css
@@ -28,8 +28,15 @@
 header{
   width: 100%;
   height: 100px;
+  text-decoration: none;
+  text-align: center;
+  padding-top: 25px;
   color: white;
   background: black;
+}
+a{
+  text-decoration: none;
+  color: white;
 }
 section{
   position: relative;
@@ -50,9 +57,11 @@ nav{
   background-color: orange;
 }
 main{
+  position: absolute;
+  left: 25%;
   display: inline-block;
   box-sizing: border-box;
-  width: 100%;
+  width: 75%;
   height: 600px;
   margin: 0;
   background-color: gray;
@@ -63,12 +72,25 @@ main{
   border: 1px solid black;
 
 }
-button{
-  width: 100%;
+ul{
+  padding: 0;
+}
+li{
+  margin-left: 0;
+  list-style: none;
+  text-decoration: none;
 }
 button:hover{
   background-color: green;
 }
+button:active{
+  background-color: blue;
+}
+.note{
+  width: 100%;
+  height: 25px;
+}
+
 
 @keyframes App-logo-spin {
   from {
