--- a/src/App.css
+++ b/src/App.css
@@ -58,6 +58,7 @@ nav{
 }
 main{
   position: absolute;
+  font-family: 'Indie Flower', cursive;
   left: 20%;
   display: inline-block;
   box-sizing: border-box;
@@ -97,13 +98,21 @@ li{
   background-color: gray;
 }
 .note{
+  color: #343B40;
   width: 100%;
   height: 30px;
+  font-family: 'Indie Flower', cursive;
   background-color: #FFF795;
   border-top: 1px solid #87FFEF;
   border-bottom: 1px solid #87FFEF;
   border-right: none;
   border-left: none;
+}
+
+.exactNote{
+  color: #343B40;
+  background-color: #FFF795;
+  height: 100%;
 }
 
 
