--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,7 @@ section{
   /* width: 100%; */
   min-height: 100px;
   margin: 0;
-  padding: 0;
+  padding: 1em;
 }
 nav{
   top: 0;
@@ -46,7 +46,7 @@ nav{
   box-sizing: border-box;
   width: 100%;
   height: 600px;
-  padding: 0;
+  padding: 1em;
   margin: 0;
   background-color: #343B40;
 }
